--- a/cloudformation-ecs-demo.yml
+++ b/cloudformation-ecs-demo.yml
@@ -465,6 +465,7 @@ Resources:
             sudo yum -y upgrade
             sudo yum install -y docker aws-cli python27-pip ecs-init bind-utils awslogs jq nfs-utils htop screen wget net-tools amazon-efs-utils
             export INSTANCE_ID=$(wget -q -O - http://169.254.169.254/latest/meta-data/instance-id)
+            export REGION="`echo \"$AVAIL_ZONE\" | sed -e 's:\([0-9][0-9]*\)[a-z]*\$:\\1:'`"
             cat > /etc/awslogs/awslogs.conf <<- EOF
             [general]
             state_file = /var/lib/awslogs/agent-state  
@@ -473,12 +474,12 @@ Resources:
             file = /var/lib/docker/containers/*/*.log
             log_group_name = dockerlogs
             log_stream_name = "$INSTANCE_ID"
+            region = "$REGION"
             EOF
             sudo systemctl enable awslogsd.service
             sudo systemctl restart awslogsd
             aws configure set preview.efs true
             export AVAIL_ZONE=`curl -s http://169.254.169.254/latest/meta-data/placement/availability-zone`
-            export REGION="`echo \"$AVAIL_ZONE\" | sed -e 's:\([0-9][0-9]*\)[a-z]*\$:\\1:'`"
             export EFSID=`aws efs describe-file-systems --region $REGION | jq '.FileSystems[]' | jq 'select(.Name=="'${ProyectID}.FileSystem'")' | jq -r '.FileSystemId'`
             mkdir /mnt/efs
             echo "$EFSID:/ /mnt/efs efs defaults,_netdev 0 0" >> /etc/fstab
